WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188823
[Attachment Support] Attachment elements don't appear in drag images on macOS
https://bugs.webkit.org/show_bug.cgi?id=188823
Summary
[Attachment Support] Attachment elements don't appear in drag images on macOS
Wenson Hsieh
Reported
2018-08-21 15:29:08 PDT
To reproduce, drag an attachment element in a web view (where the attachment element is enabled). The attachment should appear in the drag image snapshot, but it does not.
Attachments
WIP patch
(12.62 KB, patch)
2018-08-22 15:47 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(12.72 KB, patch)
2018-08-22 17:21 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-08-22 12:42:04 PDT
<
rdar://problem/43616378
>
Wenson Hsieh
Comment 2
2018-08-22 15:47:03 PDT
Created
attachment 347862
[details]
WIP patch
Wenson Hsieh
Comment 3
2018-08-22 17:21:25 PDT
Created
attachment 347881
[details]
Patch
WebKit Commit Bot
Comment 4
2018-08-23 10:20:44 PDT
Comment on
attachment 347881
[details]
Patch Clearing flags on attachment: 347881 Committed
r235229
: <
https://trac.webkit.org/changeset/235229
>
WebKit Commit Bot
Comment 5
2018-08-23 10:20:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug